
Change Log Update (00.00.87)
* 2017-05-02
+ External Processes (Windows / Posix)
  Created Classes and methods for executing external processes, doors, scripts
  Tried Boost Process but didn't work as needed and ASIO calls were not working
  implemented initial platform specific processes execution.
- Need to implement screen buffer save / restore on return from external process
- Add Flags to clear the screen on external processes execution
- Add checks if user hangs up, process will also be terminated (testing needed)
- Look at implementing either Python or V8 Java Script engine for scripting.

Change Log Update (00.00.86)
* 2017-04-29
+ Windows Project Updates
  - Updated Boost from 55 to latest 64, compiled with ICU and Boost Python now.
  - Cleaned up all Project Files, removed unused libs and include folders.
  - Cleared new Boost Warning in Config.hpp model for Boost UUID generation.
+ Resynced Linux Projects
- Researching Door/Script Server Now for externals.

Change Log Update (00.00.85)
* 2017-04-17
+ Completed Initial work on SessionStats objects and Database DAO calls.
+ Added Startup creation of stats on connection.
+ Fixed minor compiler warnings left over on signed vs unsigned comparisons and 
  Unused Database variables.
+ Synced Linux projects and Database checks on both platforms Windows and Linux.
+ Updated Users Records, removed fields not needed for individual users,
  and moved some fields to SessionStats which is better for tracking statistics.

Change Log Update (00.00.84)
* 2017-04-10
+ Completed more work on Unit Tests and Configuration Form
+ Remodeled some of the folder structure, split data and model into (2) sets app and sys
  Sys for Core System Data and Models, and App for Application Data and Models ie..
  LastCallers, OneLiners, etc.. 
+ Sync Linux workspaces and project with the new structure.  All Unit Tests are passing.
- Moving from Form Work right now to getting some applications data doing and logon sequence.